This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

07-Oct-2009 (Gnomi)
  - Check for references to destructed objects before entering them as
    keys into a mapping. (#689)
    (mapping.c)

06-Oct-2009 (Zesstra)
  - Always enable structs (#557).
    (prolang.y, lex.c, driver.h, config.h.in, func_spec)
  - Always enable new inline closures (#557).
    (prolang.y, config.h.in, driver.h, lex.c)
  - explode("","") returned an empty array, while explode("","anything")
    returned ({""}). Changed behaviour that explode will always return ({""})
    if the explode string is empty. (#180)
    (array.c)

04-Oct-2009 (Zesstra)
  - prepend '/' in get_dir() in plain mode for entries in the root directory,
    if paths are requested by GETDIR_PATH. They were omitted until now. (#501)
    (files.c)
  - Use CRYPTO_set_mem_functions() to register function pointers to our own
    allocator functions in openssl.
    (pkg-openssl.c)

21-Sep-2009 (Zesstra)
  - Added new check for a woring sbrk() (#680)
    The old check for SBRK_OK checked for a) a working brk() and the
    possibility to replace malloc. This new check only checks if sbrk() can be
    used to get a significant amount of memory (currently 50MB).
    (configure.in)
  - Updated and simplified check for replacing malloc, respect SBRK_OK and
    HAVE_MMAP. (#680) The check now sets REPLACEABLE_MALLOC instead of
    SBRK_OK. Additionally, the check was updated to current autoconf macros.
    (configure.in)
  - Make use of SBRK_OK and MALLOC_REPLACEABLE in the allocators.
    Use this two defines to determine if a user-requested MALLOC_SBRK is
    possible and define REPLACE_MALLOC accordingly. If not, undefine
    MALLOC_SBRK. Use HAVE_MMAP as fallback. In case of HAVE_MMAP and
    MALLOC_REPLACEABLE, REPLACE_MALLOC is set as well. (#680)
    (slabmalloc.c, smalloc.c, xalloc.c)

19-Sep-2009 (Zesstra)