@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all glory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+12-Oct-2009 (Gnomi)
+  - Pass all unknown telnet options to the mudlib. (#670)
+    (comm.c)
+
 07-Oct-2009 (Gnomi)
   - Check for references to destructed objects before entering them as
     keys into a mapping. (#689)
